--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/AssertionMessageTargetSelector.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/AssertionMessageTargetSelector.form
@@ -82,14 +82,15 @@
               <text resource-bundle="com/l7tech/console/panels/AssertionMessageTargetSelector" key="label.other"/>
             </properties>
           </component>
-          <component id="b5bab" class="javax.swing.JTextField" binding="_contextVarName">
+          <grid id="5802f" binding="_contextVarNamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="2" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
+            <border type="none"/>
+            <children/>
+          </grid>
         </children>
       </grid>
       <hspacer id="2dff5">
