--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/TargetMessagePanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/TargetMessagePanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="373" height="140"/>
+      <xy x="20" y="20" width="373" height="141"/>
     </constraints>
     <properties/>
     <border type="none" title="Target Message"/>
@@ -32,17 +32,6 @@
           <text value="R&amp;esponse"/>
         </properties>
       </component>
-      <component id="c049" class="javax.swing.JTextField" binding="otherMessageVariableTextfield" default-binding="true">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="2" use-parent-layout="false">
-            <minimum-size width="200" height="-1"/>
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <minimumSize width="150" height="23"/>
-        </properties>
-      </component>
       <grid id="908cb" binding="requestExtraPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -65,6 +54,15 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <grid id="7734b" binding="otherMessageVariablePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
