--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolvePrivateKeyPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolvePrivateKeyPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.ResolvePrivateKeyPanel">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="702" height="444"/>
@@ -8,36 +8,61 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="c04f5" class="javax.swing.JRadioButton" binding="useDefaultKeypairRadioButton">
+      <component id="2f891" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Use default private key"/>
+          <text resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" key="panel.title"/>
         </properties>
       </component>
-      <component id="d1d01" class="javax.swing.JRadioButton" binding="useCustomKeyPairRadioButton">
+      <grid id="70c3c" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Use custom private key"/>
-        </properties>
-      </component>
-      <grid id="b7e29" binding="customFrame" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="10" left="10" bottom="10" right="10"/>
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="etched" title="Custom Private Key"/>
+        <border type="etched" title-resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" title-key="missing.title"/>
         <children>
-          <component id="e97e7" class="javax.swing.JLabel">
+          <component id="295c5" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Key:"/>
+              <text resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" key="label.alias"/>
+            </properties>
+          </component>
+          <component id="b323f" class="javax.swing.JTextField" binding="aliasTextField">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <editable value="false"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="9e9dc" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="etched" title-resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" title-key="action.title"/>
+        <children>
+          <vspacer id="c5ab6">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <component id="d1d01" class="javax.swing.JRadioButton" binding="useCustomKeyPairRadioButton">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" key="label.change-custom-key"/>
             </properties>
           </component>
           <component id="a7343" class="javax.swing.JComboBox" binding="aliasCombo">
@@ -48,25 +73,52 @@
           </component>
           <component id="6a44f" class="javax.swing.JButton" binding="manageCustomKeysButton">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Manage Private Keys"/>
+              <text resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" key="button.private-keys"/>
+            </properties>
+          </component>
+          <component id="80c29" class="javax.swing.JRadioButton" binding="removeRadioButton">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <selected value="true"/>
+              <text resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" key="label.remove-assertions"/>
+            </properties>
+          </component>
+          <component id="58f42" class="javax.swing.JRadioButton" binding="ignoreRadioButton">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" key="label.ignore-assertions"/>
+            </properties>
+          </component>
+          <hspacer id="a8885">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="c04f5" class="javax.swing.JRadioButton" binding="useDefaultKeyPairRadioButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/console/panels/ResolvePrivateKeyPanel" key="label.change-default-key"/>
             </properties>
           </component>
         </children>
       </grid>
-      <vspacer id="c5ab6">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
     </children>
   </grid>
   <buttonGroups>
     <group name="buttonGroup">
       <member id="c04f5"/>
       <member id="d1d01"/>
+      <member id="80c29"/>
+      <member id="58f42"/>
     </group>
   </buttonGroups>
 </form>
